--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -130,12 +130,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AST.cpp" />
+    <ClCompile Include="CodeGenerator.cpp" />
     <ClCompile Include="Compiler.cpp" />
     <ClCompile Include="RedyParser.cpp" />
     <ClCompile Include="RedyLexer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AST.h" />
+    <ClInclude Include="CodeGenerator.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="RedyParser.h" />
     <ClInclude Include="RedyLexer.h" />
