--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -82,6 +82,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(ProjectDir)/llvm_target/debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>LLVMX86Info.lib;LLVMX86TargetMCA.lib;LLVMX86Disassembler.lib;LLVMX86Desc.lib;LLVMX86CodeGen.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -112,6 +114,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(ProjectDir)/llvm_target/debug</AdditionalLibraryDirectories>
+      <AdditionalDependencies>LLVMX86Info.lib;LLVMX86TargetMCA.lib;LLVMX86Disassembler.lib;LLVMX86Desc.lib;LLVMX86CodeGen.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
