--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -136,16 +136,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CodeGen.cpp" />
-    <ClCompile Include="Compiler.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="RedyParser.cpp" />
     <ClCompile Include="RedyLexer.cpp" />
+    <ClCompile Include="Register.cpp" />
     <ClCompile Include="TypeCheck.cpp" />
     <ClCompile Include="TypeTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AST.h" />
-    <ClInclude Include="CodeGen.h" />
+    <ClInclude Include="CodeGenCtx.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="RedyParser.h" />
