--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -147,10 +147,12 @@
   <ItemGroup>
     <ClInclude Include="AST.h" />
     <ClInclude Include="CodeGenCtx.h" />
+    <ClInclude Include="ExprType.h" />
     <ClInclude Include="Lexer.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="RedyParser.h" />
     <ClInclude Include="RedyLexer.h" />
+    <ClInclude Include="TypeDeclAST.h" />
     <ClInclude Include="TypeTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
