--- a/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/Compiler.vcxproj.filters
@@ -26,9 +26,6 @@
     <ClCompile Include="RedyParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TypeTable.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Logger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -41,11 +38,23 @@
     <ClCompile Include="TypeCheck.cpp">
       <Filter>Passes</Filter>
     </ClCompile>
-    <ClCompile Include="ExprType.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GenLLVMType.cpp">
       <Filter>Passes</Filter>
+    </ClCompile>
+    <ClCompile Include="Modules.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RedyModule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VariableAST.cpp">
+      <Filter>AST</Filter>
+    </ClCompile>
+    <ClCompile Include="UnknownType.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExprAST.cpp">
+      <Filter>AST</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -58,16 +67,10 @@
     <ClInclude Include="RedyParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TypeTable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CodeGenCtx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ExprType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Test.h">
@@ -101,9 +104,6 @@
       <Filter>AST</Filter>
     </ClInclude>
     <ClInclude Include="IntExpr.h">
-      <Filter>AST</Filter>
-    </ClInclude>
-    <ClInclude Include="ModuleAST.h">
       <Filter>AST</Filter>
     </ClInclude>
     <ClInclude Include="ProtoAST.h">
@@ -141,6 +141,15 @@
     </ClInclude>
     <ClInclude Include="TypeDeclAST.h">
       <Filter>AST</Filter>
+    </ClInclude>
+    <ClInclude Include="UnknownType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Modules.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RedyModule.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
