--- a/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/Compiler.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="ExprAST.cpp">
       <Filter>AST</Filter>
     </ClCompile>
+    <ClCompile Include="TypeDeclAST.cpp">
+      <Filter>AST</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Lexer.h">
