--- a/Compiler/Compiler.vcxproj
+++ b/Compiler/Compiler.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Register.cpp" />
     <ClCompile Include="ReturnStatement.cpp" />
     <ClCompile Include="StatementAST.cpp" />
+    <ClCompile Include="TypeCheckCtx.cpp" />
     <ClCompile Include="TypeDeclAST.cpp" />
     <ClCompile Include="TypeCheck.cpp" />
     <ClCompile Include="VariableAST.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="IfStatement.h" />
     <ClInclude Include="IntExpr.h" />
     <ClInclude Include="NamespaceAccessExpr.h" />
+    <ClInclude Include="NodeAST.h" />
     <ClInclude Include="ParamAST.h" />
     <ClInclude Include="Project.h" />
     <ClInclude Include="RedyModule.h" />
@@ -176,8 +178,10 @@
     <ClInclude Include="StatementAST.h" />
     <ClInclude Include="StructAST.h" />
     <ClInclude Include="SymbolAST.h" />
+    <ClInclude Include="TextPos.h" />
     <ClInclude Include="TraitAST.h" />
     <ClInclude Include="TypeAST.h" />
+    <ClInclude Include="TypeCheckCtx.h" />
     <ClInclude Include="UnaryExpr.h" />
     <ClInclude Include="UseDeclAST.h" />
     <ClInclude Include="VariableAST.h" />
